--- a/public/dashboard/css/dark-mode.css
+++ b/public/dashboard/css/dark-mode.css
@@ -212,7 +212,7 @@
 }
 
 [data-theme="dark"] .form-control {
-  background-color: #212137 !important;
+  background-color: #FFFFFF !important;
   border-color: #353558 !important;
 }
 
