--- a/public/dashboard/css/style.css
+++ b/public/dashboard/css/style.css
@@ -302,6 +302,114 @@ Danger Btn Area Style*/
 }
 
 /*
+Success Btn Area Style*/
+.success-btn {
+    font-size: 14px;
+    color: #ffffff;
+    line-height: 1;
+    -webkit-transition: all ease 0.5s;
+    transition: all ease 0.5s;
+    text-align: center;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+    display: inline-table;
+    padding: 10px 20px;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#7CFC00), to(#008000));
+    background-image: linear-gradient(to bottom, #4CBB17, #2AAA8A);
+    border-radius: 10px;
+}
+
+.success-btn.radius-btn {
+    border-radius: 10px;
+}
+
+.success-btn i {
+    position: relative;
+    top: 1.70px;
+    margin-right: 5px;
+}
+
+.success-btn::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0;
+    background-color: #2AAA8A;
+    z-index: -1;
+    -webkit-transition: all ease 0.5s;
+    transition: all ease 0.5s;
+}
+
+.success-btn:hover {
+    color: #ffffff;
+}
+
+.success-btn:hover::before {
+    height: 100%;
+    bottom: auto;
+    top: 0;
+    -webkit-animation: fadeInUp 1s linear;
+    animation: fadeInUp 1s linear;
+}
+
+/*
+Info Btn Area Style*/
+.info-btn {
+    font-size: 14px;
+    color: #ffffff;
+    line-height: 1;
+    -webkit-transition: all ease 0.5s;
+    transition: all ease 0.5s;
+    text-align: center;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+    display: inline-table;
+    padding: 10px 20px;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#6495ED), to(#0096FF));
+    background-image: linear-gradient(to bottom, #A7C7E7, #4169E1);
+    border-radius: 10px;
+}
+
+.info-btn.radius-btn {
+    border-radius: 10px;
+}
+
+.info-btn i {
+    position: relative;
+    top: 1.70px;
+    margin-right: 5px;
+}
+
+.info-btn::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0;
+    background-color: #6495ED;
+    z-index: -1;
+    -webkit-transition: all ease 0.5s;
+    transition: all ease 0.5s;
+}
+
+.info-btn:hover {
+    color: #ffffff;
+}
+
+.info-btn:hover::before {
+    height: 100%;
+    bottom: auto;
+    top: 0;
+    -webkit-animation: fadeInUp 1s linear;
+    animation: fadeInUp 1s linear;
+}
+
+/*
 Read More Btn Area Style*/
 .read-more {
   font-size: 15px;
